deployment/deploy_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
      version: v1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      containers:
      - name: auth
        image: auth:v1
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-v1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
      version: v1
  template:
    metadata:
      labels:
        app: payment
        version: v1
    spec:
      containers:
      - name: payment
        image: payment:v1
        ports:
        - containerPort: 8080
