deployment/svc_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
  labels:
    app: auth
spec:
  type: NodePort
  selector:
    app: auth
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30080

---

apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: default
  labels:
    app: payment
spec:
  type: NodePort
  selector:
    app: payment
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30081
